--- a/main.css
+++ b/main.css
@@ -1,5 +1,9 @@
 body {
     background-color: red;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 h1 {
@@ -7,4 +11,8 @@ h1 {
 }
 h2 {
     color: goldenrod;
+}
+
+.carte {
+    border: solid;
 }
