--- a/main.css
+++ b/main.css
@@ -19,6 +19,8 @@ h2 {
     width: 64px;
     height: 100px;
     margin-bottom: 20px;
+    margin-left: 1%;
+    margin-right: 1%;
     color: white;
 }
 
